# tips

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
pytorch/: TIPS_segmentation_depth_norm.ipynb  decoders.py
scenic/: __init__.py
scenic/configs/: __init__.py
scenic/models/: __init__.py
scenic/utils/: __init__.py
