[project]
name = "tips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.7",
    "jax[cuda12]>=0.10.0",
    "ml-collections>=1.1.0",
    "scenic",
    "tensorflow-text>=2.20.1",
]

[tool.uv.sources]
scenic = { git = "https://github.com/google-research/scenic" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "tips" = "." }
packages = [
    "tips",
    "tips.pytorch",
    "tips.scenic",
    "tips.scenic.configs",
    "tips.scenic.models",
    "tips.scenic.utils",
]
