[project]
name = "tips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12",
    "jax[cuda12]>=0.8",
    "jaxlib>=0.8",
    "mediapy>=1.2.6",
    "ml-collections>=1.1.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "rich>=15.0.0",
    "scenic",
    "scikit-learn>=1.8.0",
    "tensorflow-text>=2.20.1",
    "tyro>=1.0.13",
]

[tool.uv.sources]
scenic = { git = "https://github.com/google-research/scenic" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "tips" = "." }
packages = [
    "tips",
    "tips.pytorch",
    "tips.scenic",
    "tips.scenic.configs",
    "tips.scenic.models",
    "tips.scenic.utils",
]
